deploy/prow/prow_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prow-http-redirect
  namespace: prow
spec:
  parentRefs:
  - name: prow
    namespace: prow
    sectionName: http
  hostnames:
  - prow.gardener.cloud
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prow
  namespace: prow
spec:
  parentRefs:
  - name: prow
    namespace: prow
    sectionName: https
  hostnames:
  - prow.gardener.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hook
    backendRefs:
    - name: hook
      port: 8888
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: deck
      port: 80
